<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/no_connection"
            android:contentDescription="@string/movie_dsc_placeholder"/>

        <TextView
            android:id="@+id/no_internet_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection_title"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_internet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:text="@string/check_connection_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />


        <Button
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="32dp"
            android:text="@string/try_again_connection"
            android:textAllCaps="false"
            app:cornerRadius="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
