<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:background="@color/dark_grey">

    <ImageView
        android:id="@+id/author_avatar"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:contentDescription="@string/poster_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:maxLines="2"
        android:text="@string/review_author_placeholder"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textDirection="locale"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/author_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/review_content"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/review_content_placeholder"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textDirection="locale"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/author_avatar"
        app:layout_constraintTop_toBottomOf="@+id/author_name" />

    <RatingBar
        android:id="@+id/item_rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:numStars="5"
        android:progressTint="@color/gold_rating_bar"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toEndOf="@+id/author_avatar"
        app:layout_constraintTop_toBottomOf="@+id/review_content"
        app:layout_constraintVertical_bias="0.442"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>